Do not resolve containing types of inline components too early

At that point the type doesn't exist yet, because we are just parsing
it. By trying to resolve it, we may find other, unrelated, types.

Pick-to: 5.15 6.2
Fixes: QTBUG-96796
Change-Id: I0a3137122a6dc969b76bbf4efcfb07b6341fecf2
Reviewed-by: Fabian Kosmale <fabian.kosmale@qt.io>