tests/auto/qml/qqmllanguage/data/ambiguousBinding/TestCase.qml
@@ -1,0 +1,6 @@
+import QtQml 2.15
+import QtTest 1.0
+
+QtObject {
+    component Comp: QtObject {}
+}
