tests/auto/qml/qqmllanguage/tst_qqmllanguage.cpp
@@ -386,6 +386,8 @@ private slots:
     void groupedAttachedProperty_data();
     void groupedAttachedProperty();
 
+    void ambiguousContainingType();
+
 private:
     QQmlEngine engine;
     QStringList defaultImportPathList;
@@ -6665,6 +6667,20 @@ void tst_qqmllanguage::groupedAttachedProperty()
                 qmlAttachedPropertiesObject<MyQmlObject>(grouped));
     QVERIFY(attached != nullptr);
     QCOMPARE(attached->value(), 10);
+}
+
+void tst_qqmllanguage::ambiguousContainingType()
+{
+    // Need to do it twice, so that we load from disk cache the second time.
+    for (int i = 0; i < 2; ++i) {
+        QQmlEngine engine;
+
+        // Should not crash when loading the type
+        QQmlComponent c(&engine, testFileUrl("ambiguousBinding/ambiguousContainingType.qml"));
+        QVERIFY2(c.isReady(), qPrintable(c.errorString()));
+        QScopedPointer<QObject> o(c.create());
+        QVERIFY(!o.isNull());
+    }
 }
 
 QTEST_MAIN(tst_qqmllanguage)
